[project]
name = 'mldemo'
description = 'Chapter 09 project from Machine Learning Engineering With Python'
license = {text = "MIT License"}
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dynamic = ["version"]

dependencies = [
    'apache-airflow',
    'apache-airflow-providers-apache-spark',
    'boto3==1.34.8',
    'openai',
    'pandas',
    'pyspark',
    'scikit-learn',
]

[project.optional-dependencies]
dev = [
    'mypy',
    'pytest',
    'ruff',
]

[tools.setuptools]
packages = ["mldemo"]

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'

[tool.setuptools.dynamic]
version = {attr = "mldemo.__version__"}