[project]
name = 'mldemo'
description = 'Chapter 09 project from Machine Learning Engineering With Python'
license = {text = "MIT License"}
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dynamic = ["version"]

dependencies = [
    'apache-airflow',
    'boto3==1.34.8',
    'openai',
    'pandas',
    'scikit-learn',
]

[project.optional-dependencies]
dev = [
    'mypy',
    'pytest',
    'pre-commit',
    'ruff',
]

[tools.setuptools]
packages = ["mldemo"]

[tool.setuptools.packages.find]
include = ['mldemo']
exclude = ['dags']

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[tool.ruff]
line-length = 120
extend-select = ["I"]

[tool.ruff.format]
quote-style = 'single'

[tool.setuptools.dynamic]
version = {attr = "mldemo.__version__"}